--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="start">Start</string>
+    <string name="hours">hh</string>
+    <string name="min">mm</string>
+    <string name="sec">ss</string>
+    <string name="timer_title">Timer</string>
+    <string name="timer_text">Timer Notification</string>
 </resources>
