Test case for service and Utility.kt added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="sec">ss</string>
     <string name="timer_title">Timer</string>
     <string name="timer_text">Timer Notification</string>
+    <string name="wrong_input_message">Enter Right Format</string>
 </resources>
