Test Cases and order of the list before submitting to adapter is maintained.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="timer_title">Timer</string>
     <string name="timer_text">Timer Notification</string>
     <string name="wrong_input_message">Enter Right Format</string>
+    <string name="reset_value">00</string>
+    <string name="running_timer">Running Timer:</string>
 </resources>
